# app/presentation/health/handler.go
@@ -12,6 +12,13 @@ func NewHandler() *handler {
 	return &handler{}
 }
 
+// HealthCheck godoc
+// @Summary ヘルスチェック
+// @Tags healthcheck
+// @Accept json
+// @Produce json
+// @Success 200 {object} Response
+// @Router /v1/health [get]
 func(h *handler) Health(c *gin.Context) {
 	c.JSON(http.StatusOK,Response{Status: "OK"})
 	return
